Update to Rollbar 1.0
Rollbar has undergone a radical redesign.  The documented Rollbar
object is completely static and difficult to test against.  The
RollbarNotifier object is gone, however there is a RollbarLogger
object that fills in for it in most cases.

--- a/Tests/app/config.yml
+++ b/Tests/app/config.yml
@@ -13,4 +13,4 @@ security:
             anonymous: ~
 
 staffim_rollbar:
-    access_token: example_token
+    access_token: example_token_32_characters_long
